--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,19 @@
 html{
     background-color: var(--backgr);
 }
-img{
-    width: 20%;
-}
+ img{
+    width: 80%;
+} 
+/* .cover img{
+    width: 80%;
+} */
 a{
     text-decoration: none;
 }
 label{
     color: var(--colorfont);
+}
+
+h2 > span{
+    color: var(--pink);
 }
